--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomePage.ui.account.Account"></activity>
+        <activity android:name=".HomePage.ui.account.Account" />
         <activity android:name=".Login.Signup" />
         <activity android:name=".HomePage.ui.signout.Signout" />
         <activity
