By Nikunj Ramani
Add Spent fragemnt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,14 +4,11 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/hissab"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomePage.ui.account.Account" />
-        <activity android:name=".Login.Signup" />
-        <activity android:name=".HomePage.ui.signout.Signout" />
         <activity
             android:name=".HomePage.homePage"
             android:label="@string/title_activity_home_page"
